tests/ui/fn/implied-bounds-unnorm-associated-type-2.stderr
error: lifetime may not live long enough
  --> $DIR/implied-bounds-unnorm-associated-type-2.rs:19:5
   |
LL | fn g<'a, 'b>() {
   |      --  -- lifetime `'b` defined here
   |      |
   |      lifetime `'a` defined here
LL |     f::<'a, 'b>(());
   |     ^^^^^^^^^^^^^^^ generic argument requires that `'b` must outlive `'a`
   |
   = help: consider adding the following bound: `'b: 'a`

error: aborting due to 1 previous error

